/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Gabriel Martin
 */
package baseline;

import java.util.ArrayList;

public class Inventory {
    //holds the array of items created by the fromJSON method
    ArrayList<Item> products;
}
